# mygifcompressor

./: .gitignore  README.md  pyproject.toml
src/mygifcompressor/: __init__.py  cli.py  compressor.py
tests/: test_compressor.py
